--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -29,7 +29,7 @@
             </TextBlock>
         </StatusBar>
 
-        <Label x:Name="label3" Content="Control Panel" HorizontalAlignment="Left" Margin="990,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="80"/>
+        <Label x:Name="label3" Content="Control Panel" Margin="0,44,288,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" HorizontalAlignment="Right" Width="80"/>
         <Grid Margin="0,75,10,30" HorizontalAlignment="Right" Width="358">
 
             <Label x:Name="label4" Content="Loaded File" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="80"/>
@@ -67,10 +67,10 @@
         </Grid>
 
         <Grid HorizontalAlignment="Left" Height="38" Margin="265,75,0,0" VerticalAlignment="Top" Width="720">
-            <Label Content="From" HorizontalAlignment="Left" Margin="9,5,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47"/>
-            <xctk:DateTimeUpDown Name="timePicker_From" Margin="57,10,0,10" HorizontalAlignment="Left" Width="260" ValueChanged="timePicker_From_ValueChanged"/>
-            <Label Content="To" HorizontalAlignment="Left" Margin="398,5,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47"/>
-            <xctk:DateTimeUpDown Name="timePicker_To" Margin="0,10,10,10" HorizontalAlignment="Right" Width="260" ValueChanged="timePicker_To_ValueChanged"/>
+            <Label Content="From" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47"/>
+            <xctk:DateTimeUpDown Name="timePicker_From" Margin="57,0,0,10" HorizontalAlignment="Left" Width="260" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_From_ValueChanged"/>
+            <Label Content="To" HorizontalAlignment="Left" Margin="398,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47"/>
+            <xctk:DateTimeUpDown Name="timePicker_To" Margin="0,0,10,10" HorizontalAlignment="Right" Width="260" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_To_ValueChanged"/>
         </Grid>
 
     </Grid>
