--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -46,24 +46,18 @@
 
             <TabItem Header="Preview" Height="50" VerticalAlignment="Top" Margin="-2,23,0,-23">
                 <Grid>
-                    <Label x:Name="label" Content="Signals" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="47"/>
-                    <ListBox x:Name="listBox_SignalSelect" HorizontalAlignment="Left" Margin="10,75,0,30" Width="250" SelectionChanged="listBox_SignalSelect_SelectionChanged" SelectionMode="Multiple"/>
-
-                    <Label x:Name="label2" Content="Plot" HorizontalAlignment="Left" Margin="265,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="47"/>
-                    <oxy:PlotView Name="PlotView_signalPlot" Margin="265,118,373,30"/>
-
                     <ScrollViewer>
-                        <Grid Margin="0,75,10,30" HorizontalAlignment="Right" Width="358">
+                        <Grid HorizontalAlignment="Right" Width="336">
                             <Label x:Name="label5" Content="Patient Information" HorizontalAlignment="Left" Margin="10,13,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="127"/>
                             <Grid Height="135" Margin="10,39,10,0" VerticalAlignment="Top">
                                 <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                                 <Label Content="Sex" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                                 <Label Content="Code" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                                 <Label Content="Birthdate" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
-                                <TextBox x:Name="textBox_PI_Name" Height="23" Margin="75,13,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                                <TextBox x:Name="textBox_PI_Sex" Height="23" Margin="75,45,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                                <TextBox x:Name="textBox_PI_Code" Height="23" Margin="75,76,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                                <TextBox x:Name="textBox_PI_Birthdate" Height="23" Margin="75,107,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                                <TextBox x:Name="textBox_PI_Name" Height="23" Margin="75,13,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
+                                <TextBox x:Name="textBox_PI_Sex" Height="23" Margin="75,45,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
+                                <TextBox x:Name="textBox_PI_Code" Height="23" Margin="75,76,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
+                                <TextBox x:Name="textBox_PI_Birthdate" Height="23" Margin="75,107,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
                             </Grid>
 
                             <Label x:Name="label6" Content="Recording Information" HorizontalAlignment="Left" Margin="10,179,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136"/>
@@ -71,9 +65,9 @@
                                 <Label Content="Equip." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="65"/>
                                 <Label Content="Code" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                                 <Label Content="Tech." HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
-                                <TextBox x:Name="textBox_RI_Equipment" Height="23" Margin="75,13,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                                <TextBox x:Name="textBox_RI_Code" Height="23" Margin="75,45,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                                <TextBox x:Name="textBox_RI_Technician" Height="23" Margin="75,76,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                                <TextBox x:Name="textBox_RI_Equipment" Height="23" Margin="75,13,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
+                                <TextBox x:Name="textBox_RI_Code" Height="23" Margin="75,45,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
+                                <TextBox x:Name="textBox_RI_Technician" Height="23" Margin="75,76,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"/>
                             </Grid>
 
                             <Label Content="Signal Information" HorizontalAlignment="Left" Margin="10,318,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="108"/>
@@ -93,14 +87,19 @@
 
                         </Grid>
                     </ScrollViewer>
-                            
+
+                    <Label x:Name="label" Content="Signals" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="47"/>
+                    <ListBox x:Name="listBox_SignalSelect"  HorizontalAlignment="Left" Margin="10,75,0,9.667" Width="250" SelectionMode="Multiple" SelectionChanged="listBox_SignalSelect_SelectionChanged"/>
+
+                    <Label x:Name="label2" Content="Plot" HorizontalAlignment="Left" Margin="265,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="47"/>
+                    <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,118,373,30"/>
+
                     <Grid Height="38" Margin="265,75,373,0" VerticalAlignment="Top">
-                        <Label Content="From" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47"/>
-                        <xctk:DateTimeUpDown Name="timePicker_From" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_From_ValueChanged"/>
-                        <Label Content="To" Margin="307,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" HorizontalAlignment="Left" Width="47"/>
-                        <xctk:DateTimeUpDown Name="timePicker_To" Margin="359,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_To_ValueChanged"/>
+                        <Label Content="From" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" Width="47" HorizontalContentAlignment="Center"/>
+                        <xctk:DateTimeUpDown x:Name="timePicker_From" Margin="57,0,0,10" HorizontalAlignment="Left" Width="200" AllowTextInput="False" TextAlignment="Center" ValueChanged="timePicker_From_ValueChanged"/>
+                        <Label Content="Length (s)" Margin="262,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="28" HorizontalAlignment="Left" Width="62" HorizontalContentAlignment="Center"/>
+                        <xctk:IntegerUpDown x:Name="timePicker_Period" Margin="329,0,0,10" HorizontalAlignment="Left" Width="120" AllowTextInput="True" TextAlignment="Center" ValueChanged="timePicker_Period_ValueChanged"/>
                     </Grid>
-                        
                 </Grid>
             </TabItem>
         </TabControl>
