--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -54,7 +54,7 @@
                         <Grid Margin="10,41,10,0" Height="135" VerticalAlignment="Top">
                             <Label Content="Start" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                             <Label Content="End" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
-                            <Label Content="Rec. Time" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
+                            <Label Content="Rec. Prd." HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                             <Label Content="Num Rec." HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                             <TextBox x:Name="textBox_StartTime" Height="23" Margin="75,13,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True"/>
                             <TextBox x:Name="textBox_EndTime" Height="23" Margin="75,44,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True"/>
@@ -87,7 +87,7 @@
                         <Label Content="Signal Information" HorizontalAlignment="Left" Margin="10,497,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="108"/>
 
                         <ComboBox x:Name="comboBox_SignalSelect" Height="23" VerticalAlignment="Top" Margin="123,500,21,0" SelectionChanged="comboBox_SignalSelect_SelectionChanged"/>
-                        <Label Content="Rec. Smp." HorizontalAlignment="Left" Margin="10,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
+                        <Label Content="Smp/Rec." HorizontalAlignment="Left" Margin="10,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="60"/>
                         <TextBox x:Name="textBox_SampRecord" Height="23" Margin="84,531,21,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True"/>
 
                     </Grid>
